--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -394,8 +394,8 @@
                         />
 
 
-                    <com.example.calories.ui.views.MeasurementSelectorView
-                        android:id="@+id/measurement_selector"
+                    <com.example.calories.ui.views.UnitSelectorView
+                        android:id="@+id/unit_selector"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
