--- a/app/src/main/res/layout/custom_unit_selector.xml
+++ b/app/src/main/res/layout/custom_unit_selector.xml
@@ -8,7 +8,7 @@
     >
 
     <Spinner
-        android:id="@+id/spinner_measurement"
+        android:id="@+id/spinner_unit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,7 +17,7 @@
 
 
     <EditText
-        android:id="@+id/edit_custom_measurement"
+        android:id="@+id/edit_custom_unit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
