--- a/app/src/main/res/layout/activity_my_prodact.xml
+++ b/app/src/main/res/layout/activity_my_prodact.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.screens.MyProductActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/productsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
