--- a/app/src/main/res/layout/card_add_food_to_list.xml
+++ b/app/src/main/res/layout/card_add_food_to_list.xml
@@ -5,51 +5,52 @@
     android:layout_alignParentBottom="true"
     android:background="@android:color/transparent"
     android:windowSoftInputMode="adjustResize">
-    <!--  כחול -כרטיסיית מוצר קלוריות והוספה לרשימה    -->
+
+    <!-- Product Selection Bottom Sheet -->
     <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ly_addFood"
-        android:orientation="vertical"
+        android:id="@+id/ly_productSelectionBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="5dp"
         android:background="@drawable/sty_blue"
-        >
+        android:visibility="visible">
 
+        <!-- Close Bottom Sheet Button -->
         <ImageView
-            android:id="@+id/iv_delete1"
-            android:visibility="visible"
+            android:id="@+id/iv_closeBottomSheet"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="1dp"
             android:src="@drawable/ic_baseline_clear_24_w"
-            />
+            android:visibility="visible" />
 
+        <!-- Calories Display Header -->
         <TextView
-            android:id="@+id/tv_kal"
+            android:id="@+id/tv_caloriesHeader"
             android:layout_width="120dp"
             android:layout_height="28dp"
             android:layout_gravity="center"
             android:layout_marginHorizontal="3dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/sty_2_half"
-            android:ems="10"
             android:gravity="center"
             android:text="קלוריות"
-            android:textColor="#000"
-            />
+            android:textColor="#000" />
 
+        <!-- Product Information Section -->
         <RelativeLayout
+            android:id="@+id/rl_productInfoSection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginHorizontal="3dp"
             android:background="@drawable/sty_2">
 
-
+            <!-- Selected Product Name -->
             <TextView
-                android:id="@+id/tv_food"
+                android:id="@+id/tv_selectedProductName"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
@@ -59,117 +60,120 @@
                 android:textColor="#000"
                 android:gravity="center"
                 android:maxLines="1"
-                android:scrollbars="horizontal"
-                />
+                android:scrollbars="horizontal" />
 
-
+            <!-- Expand More Icon -->
             <ImageView
-                android:id="@+id/iv_expend_more"
+                android:id="@+id/iv_expandProductInfo"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/baseline_expand_more_24"
-                />
+                android:src="@drawable/baseline_expand_more_24" />
+
+            <!-- QR Code Information (Hidden by default) -->
             <TextView
-                android:id="@+id/tv_qr_information"
-                android:visibility="gone"
+                android:id="@+id/tv_barcodeInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_food"
+                android:layout_below="@id/tv_selectedProductName"
                 android:text=" פרטי ברקוד: "
                 android:textSize="14sp"
                 android:textColor="#333333"
-                />
-
-
-
-
+                android:visibility="gone" />
 
         </RelativeLayout>
 
-
+        <!-- Serving Size and Amount Input Section -->
         <LinearLayout
+            android:id="@+id/ll_servingAmountSection"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="22dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
+            <!-- Serving Size Unit Display -->
             <TextView
-                android:id="@+id/tv_Type"
-                android:layout_weight="1"
-                android:text="מדד"
+                android:id="@+id/tv_unit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:layout_marginHorizontal="3dp"
-                android:ems="10"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#000"
                 android:background="@drawable/sty_2"
-                />
+                android:gravity="center"
+                android:text="מדד"
+                android:textColor="#000" />
+
+            <!-- Separator Dot -->
             <ImageView
-                android:visibility="visible"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_baseline_circle_24dot"
-                />
+                android:visibility="visible" />
+
+            <!-- Amount Input Field -->
             <EditText
-                android:text="1"
-                android:id="@+id/et_amounttt"
-                android:layout_weight="1"
+                android:id="@+id/et_selectedAmount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:layout_marginHorizontal="3dp"
-                android:ems="10"
-                android:gravity="center"
-                android:textColorHint="#CCCCCC"
-                android:textColor="#000"
                 android:layout_gravity="center"
-                android:maxLines="1"
-                android:hint="כמות"
-                android:inputType="text"
                 android:background="@drawable/sty_2"
-                />
+                android:gravity="center"
+                android:hint="כמות"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:text="1"
+                android:textColor="#000"
+                android:textColorHint="#CCCCCC" />
+
         </LinearLayout>
+
+        <!-- Amount Controls and Add Button Section -->
         <RelativeLayout
+            android:id="@+id/rl_controlsSection"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="25dp">
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="15dp">
+
+            <!-- Plus Button -->
             <ImageView
-                android:id="@+id/minus_z"
-                android:layout_toRightOf="@id/plus_z"
-                android:padding="8dp"
+                android:id="@+id/iv_increaseAmount"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/white_circle"
+                android:padding="8dp"
+                android:src="@drawable/ic_baseline_add_24" />
+
+            <!-- Minus Button -->
+            <ImageView
+                android:id="@+id/iv_decreaseAmount"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_toRightOf="@id/iv_increaseAmount"
                 android:layout_marginHorizontal="15dp"
                 android:background="@drawable/white_circle"
-                android:src="@drawable/ic_baseline_horizontal_rule_24"
-                />
-            <ImageView
-                android:id="@+id/plus_z"
-                android:layout_alignParentLeft="true"
                 android:padding="8dp"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:background="@drawable/white_circle"
-                android:src="@drawable/ic_baseline_add_24"
-                />
+                android:src="@drawable/ic_baseline_horizontal_rule_24" />
 
+            <!-- Add to Consumption Button -->
             <Button
-                android:id="@+id/btn_addFood"
-                android:layout_gravity="center"
-                android:layout_alignParentRight="true"
+                android:id="@+id/btn_addToConsumption"
                 android:layout_width="120dp"
                 android:layout_height="45dp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center"
                 android:background="@drawable/sty_w_r"
                 android:text="הוסף"
-                android:textColor="@color/black"
-                />
-
+                android:textColor="@color/black" />
 
         </RelativeLayout>
+
     </LinearLayout>
+
 </ScrollView>
