--- a/app/src/main/res/layout/card_add_consumed_product.xml
+++ b/app/src/main/res/layout/card_add_consumed_product.xml
@@ -114,7 +114,7 @@
 
             <!-- Amount Input Field -->
             <EditText
-                android:id="@+id/et_selectedAmount"
+                android:id="@+id/et_addAmount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
