--- a/app/src/main/res/layout/card_add_new_custom_product.xml
+++ b/app/src/main/res/layout/card_add_new_custom_product.xml
@@ -8,21 +8,21 @@
     <!-- כתום - כרטיסיית יצירת מוצר חדש   -->
     <LinearLayout
         android:visibility="gone"
-        android:id="@+id/ly_addNewPrivetFood"
+        android:id="@+id/ly_customProductBottomSheet"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/sty_orange2">
+        android:background="@drawable/card_orang_background">
 
         <LinearLayout
-            android:id="@+id/ly_selfSearch_bar"
+            android:id="@+id/ly_productCreationForm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_hideSelfSearchBar"
+                android:id="@+id/iv_collapseBottomSheet"
                 android:visibility="visible"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
@@ -62,7 +62,7 @@
                     android:background="@drawable/sty_2"
                     />
                 <ImageView
-                    android:id="@+id/iv_barcode"
+                    android:id="@+id/iv_barcodeScan"
                     android:layout_weight="5"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
