Rename MyListRecyclerView to consumedProductsRecyclerView in main_screen.xml

--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -52,7 +52,7 @@
 
         <!-- רשימת מוצרים שנצרכו -->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/myListRecyclerView"
+            android:id="@+id/consumedProductsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/rl_mainCal"
