Set initial visibility of settings dialog to gone in main activity layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
     <include layout="@layout/cards_container" />
 
     <!-- חלון הגדרות -->
-    <include layout="@layout/dialog_settings" />
+    <include layout="@layout/dialog_settings"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
