--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -57,7 +57,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:padding="9dp"
-                android:background="@drawable/circle_oreng"
+                android:background="@drawable/circle_orang"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_baseline_search_24_white"
                 android:visibility="gone" />
