Fix typo in drawable name for search icon background
The drawable name `circle_oreng` was corrected to `circle_orang` in the `bottom_menu.xml` layout file.

--- a/app/src/main/res/layout/card_add_new_custom_product.xml
+++ b/app/src/main/res/layout/card_add_new_custom_product.xml
@@ -7,7 +7,7 @@
     android:windowSoftInputMode="adjustResize">
     <!-- כתום - כרטיסיית יצירת מוצר חדש   -->
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/ly_customProductBottomSheet"
         android:orientation="vertical"
         android:layout_width="match_parent"
