Display consumed product edit card
The visibility of the `ly_editConsumedProduct` LinearLayout in `card_edit_consumed_product.xml` has been changed from `gone` to `visible`. This makes the layout for editing consumed products visible by default.

--- a/app/src/main/res/layout/card_edit_consumed_product.xml
+++ b/app/src/main/res/layout/card_edit_consumed_product.xml
@@ -7,7 +7,7 @@
     android:windowSoftInputMode="adjustResize">
     <!--ירוק -   כרטיסיית עריכת מוצר פרטי     -->
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/ly_editConsumedProduct"
         android:orientation="vertical"
         android:layout_width="match_parent"
