--- a/app/src/main/res/layout/cards_container.xml
+++ b/app/src/main/res/layout/cards_container.xml
@@ -21,15 +21,17 @@
             android:layout_margin="8dp"
             android:layout_marginHorizontal="10dp"
             android:layout_gravity="right"
-            android:layout_below="@+id/rl_top"
-            android:background="@drawable/circle_oreng"
+            android:background="@drawable/circle_orang"
             android:src="@drawable/baseline_arrow_drop_up_white"
             android:visibility="gone" />
 
         <!-- include כרטיסיות (הוספה, עריכה, חיפוש עצמי) -->
-        <include layout="@layout/card_add_new_custom_product" />
-        <include layout="@layout/card_add_consumed_product" />
-        <include layout="@layout/card_edit_consumed_product" />
+        <include layout="@layout/card_add_new_custom_product"
+            />
+        <include layout="@layout/card_add_consumed_product"
+           />
+        <include layout="@layout/card_edit_consumed_product"
+            />
 
     </LinearLayout>
 </ScrollView>
