--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@drawable/message_sty1"
     android:padding="15dp"
-    android:visibility="gone">
+    android:visibility="visible">
 
     <TextView
         android:id="@+id/t_s"
@@ -24,21 +24,6 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_clearSavedItems"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" מחק  \n פריטים שמורים \n (ברשימת חיפוש)"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingVertical="5dp"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:background="#5C5C5C"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="gone" />
-
-    <TextView
         android:id="@+id/tv_clearMainCaloriesList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,21 +36,6 @@
         android:background="#FFA5A5"
         android:textColor="@color/white"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_printSavedItemsCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="הדפס קוד \n פריטים שמורים "
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingVertical="5dp"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:background="#1AFF00"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_returnToMainScreen"
