--- a/app/src/main/res/layout/dialog_consumed_edit.xml
+++ b/app/src/main/res/layout/dialog_consumed_edit.xml
@@ -15,15 +15,6 @@
         android:padding="5dp"
         android:background="@drawable/sty_green"
         >
-        <ImageView
-            android:id="@+id/closeEditImg"
-            android:visibility="visible"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="1dp"
-            android:src="@drawable/ic_baseline_clear_24_w"
-            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,19 +23,7 @@
             android:textColor="#FFFFFF"
             android:textSize="25sp"
             android:textStyle="bold"
-            />
-        <TextView
-            android:visibility="gone"
-            android:layout_width="120dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="3dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/sty_2_half"
-            android:ems="10"
-            android:gravity="center"
-            android:text="קלוריות"
-            android:textColor="#000"
+            android:layout_marginBottom="15dp"
             />
         <TextView
             android:id="@+id/consumedProductNameTv"
@@ -99,8 +78,9 @@
                 android:layout_gravity="center"
                 android:maxLines="1"
                 android:hint="כמות"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 android:background="@drawable/sty_2"
+
                 />
         </LinearLayout>
         <RelativeLayout
