--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,6 +25,7 @@
         android:layout_alignParentRight="true"
         android:layout_above="@+id/bottomActionMenu"
         android:layout_marginHorizontal="10dp"
+        android:contentDescription="@string/back_to_main_activity"
         android:src="@drawable/ic_baseline_arrow_circle_right_blue" />
 
     <!-- תפריט חיפוש תחתון + סריקת ברקוד -->
