--- a/app/src/main/res/menu/pa_menu.xml
+++ b/app/src/main/res/menu/pa_menu.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/menu1_dotan"
-        android:title="הוספת פריטים של דותן לסל האישי"
-        android:tooltipText="הוספת פריטים של דותן לסל האישי"
+        android:title="@string/add_dotan_self_product"
+        android:tooltipText="@string/add_dotan_self_product"
         android:icon="@drawable/ic_baseline_download_24"
         app:showAsAction="always"/>
 
