--- a/app/src/main/res/layout/dialog_consumed_edit.xml
+++ b/app/src/main/res/layout/dialog_consumed_edit.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="עריכת מוצר"
+            android:text="@string/edit_product"
             android:layout_gravity="center"
             android:textColor="#FFFFFF"
             android:textSize="25sp"
@@ -27,7 +27,7 @@
             />
         <TextView
             android:id="@+id/consumedProductNameTv"
-            android:text="מוצר"
+            android:text="@string/product"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:layout_marginTop="0dp"
@@ -46,7 +46,7 @@
             <TextView
                 android:visibility="gone"
                 android:layout_weight="1"
-                android:text="מדד"
+                android:text="@string/measure"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="3dp"
@@ -57,6 +57,7 @@
                 android:background="@drawable/sty_2"
                 />
             <ImageView
+                android:contentDescription="@string/dot"
                 android:visibility="gone"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
@@ -65,7 +66,8 @@
                 />
 
             <EditText
-                android:text="1"
+                android:autofillHints="1"
+                android:text="@string/one"
                 android:id="@+id/consumedProductNewAmountTv"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -77,7 +79,7 @@
                 android:textColor="#000"
                 android:layout_gravity="center"
                 android:maxLines="1"
-                android:hint="כמות"
+                android:hint="@string/amount"
                 android:inputType="numberDecimal"
                 android:background="@drawable/sty_2"
 
@@ -92,6 +94,7 @@
             <ImageView
                 android:id="@+id/decreaseEditImg"
                 android:layout_toRightOf="@+id/increaseEditImg"
+                android:contentDescription="@string/decrease"
                 android:padding="8dp"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
@@ -102,6 +105,7 @@
             <ImageView
                 android:id="@+id/increaseEditImg"
                 android:layout_alignParentLeft="true"
+                android:contentDescription="@string/add"
                 android:padding="8dp"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
@@ -115,7 +119,7 @@
                 android:layout_width="120dp"
                 android:layout_height="45dp"
                 android:background="@drawable/sty_w_r"
-                android:text="שמור שינויים"
+                android:text="@string/save_changes"
                 android:textColor="@color/black"
                 />
 
