Add content descriptions to ImageViews in bottom_menu.xml
This commit adds `android:contentDescription` attributes to the three ImageViews within the `bottom_menu.xml` layout file. The descriptions are sourced from string resources:
- `@string/scan_barcode`
- `@string/add_self_calorie_value`
- `@string/move_to_custom_product_view`

--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -35,6 +35,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/scan_barcode"
                 android:padding="9dp"
                 android:background="@drawable/circle_blue"
                 android:scaleType="fitCenter"
@@ -45,6 +46,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/add_self_calorie_value"
                 android:padding="9dp"
                 android:background="@drawable/circle_purple"
                 android:scaleType="fitCenter"
@@ -56,6 +58,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/move_to_custom_product_view"
                 android:padding="9dp"
                 android:background="@drawable/circle_orang"
                 android:scaleType="fitCenter"
