Localize strings and add content descriptions in MyProductActivity layout
This commit localizes various text elements in the `activity_my_prodact.xml` layout file by replacing hardcoded strings with string resources. It also adds `contentDescription` attributes to several ImageViews for accessibility.

Specifically, the following changes were made:
- Replaced "עריכת מוצר" with `@string/edit_product` for the product editing title.
- Replaced "מוצר" with `@string/product` for the product name hint.
- Replaced "קלוריות" with `@string/calories` for the calories hint.
- Replaced "שמור מוצר" with `@string/save_product` for the save product button text.
- Added `android:contentDescription="@string/delete"` to the delete ImageView.
- Added `android:contentDescription="@string/scan_barcode"` to the barcode scan ImageView.
- Added `android:contentDescription="@string/add_product"` to the FloatingActionButton.

--- a/app/src/main/res/layout/activity_my_prodact.xml
+++ b/app/src/main/res/layout/activity_my_prodact.xml
@@ -39,12 +39,13 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="center"
+            android:contentDescription="@string/delete"
             android:src="@drawable/ic_baseline_clear_24_w" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="עריכת מוצר"
+            android:text="@string/edit_product"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:layout_gravity="center"
@@ -62,7 +63,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
-                android:hint="מוצר"
+                android:autofillHints="מוצר"
+                android:hint="@string/product"
                 android:maxLines="1"
                 android:imeOptions="actionNext"
                 android:inputType="text"
@@ -75,6 +77,7 @@
                 android:id="@+id/iv_barcodeScan"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:contentDescription="@string/scan_barcode"
                 android:src="@drawable/ic_baseline_qr_code_2_24"
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
@@ -83,7 +86,8 @@
             android:id="@+id/et_kal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="קלוריות"
+            android:autofillHints="קלוריות"
+            android:hint="@string/calories"
             android:layout_marginTop="10dp"
             android:background="@drawable/sty_2"
             android:drawableRight="@drawable/ic_baseline_local_fire_department_24"
@@ -104,7 +108,7 @@
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="שמור מוצר"
+            android:text="@string/save_product"
             android:layout_marginTop="13dp"
             android:textColor="@color/black"
             android:background="@android:color/white" />
@@ -114,6 +118,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/add_product"
         android:src="@drawable/baseline_add_white"
         app:backgroundTint="@color/blue"
         app:tint="@android:color/white"
