Rename layout and change input type
- Renamed `card_add_new_custom_product.xml` to `dialog_product_custom.xml`.
- Changed `android:inputType` from `text` to `numberDecimal` in the renamed layout file.

--- a/app/src/main/res/layout/dialog_product_custom.xml
+++ b/app/src/main/res/layout/dialog_product_custom.xml
@@ -83,7 +83,7 @@
                 android:textColor="#000"
                 android:ems="10"
                 android:maxLines="1"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 android:background="@drawable/sty_2"
                 />
 
