Remove unused custom product dialog include
This commit removes the include statement for `dialog_product_custom.xml`
from `cards_container.xml` as it is no longer used.

--- a/app/src/main/res/layout/cards_container.xml
+++ b/app/src/main/res/layout/cards_container.xml
@@ -27,8 +27,8 @@
             android:visibility="gone" />
 
         <!-- include כרטיסיות (הוספה, עריכה, חיפוש עצמי) -->
-        <include layout="@layout/dialog_product_custom"
-            />
+<!--        <include layout="@layout/dialog_product_custom"-->
+<!--            />-->
 
 
     </LinearLayout>
