Rename sty_1.xml and update style
This commit renames `sty_1.xml` to `calories_product_item_display.xml` and updates its style.

**Key changes:**
- Renamed `app/src/main/res/drawable/sty_1.xml` to `app/src/main/res/drawable/calories_product_item_display.xml`.
- Changed corner radius:
    - Removed `android:radius="10dp"`.
    - Changed `android:topLeftRadius` from "10dp" to "12dp".
    - Added `android:bottomLeftRadius="12dp"`.
- Changed solid color from `#FFC400` to `#26036CF6`.

--- a/app/src/main/res/drawable/calories_product_item_display.xml
+++ b/app/src/main/res/drawable/calories_product_item_display.xml
@@ -6,8 +6,8 @@
     android:width="0dp"
     android:color="#090909"/>
     <corners
-        android:radius="10dp"
-        android:topLeftRadius="10dp"
+        android:topLeftRadius="12dp"
+        android:bottomLeftRadius="12dp"
         />
 
     <padding
@@ -16,6 +16,7 @@
         android:top="2dp"
         android:bottom="2dp"/>
 
-    <solid android:color="#FFC400"/>
+<!--    <solid android:color="#FFC400"/>-->
+    <solid android:color="#26036CF6"/>
 
 </shape>
