--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -31,7 +31,7 @@
             android:layout_weight="6.0">
 
             <ImageView
-                android:id="@+id/iv_barcodeSearch_round"
+                android:id="@+id/barcodeIcon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
