--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -29,13 +29,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <!-- סך הקלוריות היומי -->
         <RelativeLayout
             android:id="@+id/rl_mainCal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/tv_totalCalories"
+                android:id="@+id/caloriesViewText"
                 app:drawableLeftCompat="@drawable/ic_baseline_local_fire_department_24_w"
                 app:drawableStartCompat="@drawable/ic_baseline_local_fire_department_24_w"
                 android:layout_width="wrap_content"
@@ -62,6 +63,8 @@
             app:stackFromEnd="false"
             android:transcriptMode="alwaysScroll" />
     </RelativeLayout>
+
+
 
     <!-- הודעה: מוצר לא קיים במערכת -->
     <RelativeLayout
