Add focusable attribute to product item layout
This commit adds the `android:focusable="true"` attribute to the root `ConstraintLayout` in the `product_item.xml` layout file. This allows the product item to receive focus, which can be useful for accessibility and keyboard navigation.

--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -8,6 +8,7 @@
     android:id="@+id/main"
     android:background="@drawable/product_item_background"
     android:elevation="2dp"
+    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:paddingRight="6dp">
