Refactor view IDs in top_bar.xml
This commit updates the `android:id` attributes for several views within the `top_bar.xml` layout file for better clarity and consistency.

**Key changes:**
- `btn_lastDay` renamed to `lastDayBtn`
- `btn_nextDay` renamed to `nextDayBtn`
- `tv_date` renamed to `currentDateText`
- `iv_settings` renamed to `settingsIcon`
- `iv_myProducts` renamed to `customListIcon`

The `android:layout_toRightOf` and `android:layout_toLeftOf` attributes for `lastDayBtn` and `nextDayBtn` respectively were also updated to reference the new ID `currentDateText`.

--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -13,9 +13,9 @@
         android:layout_height="60dp">
 
         <Button
-            android:id="@+id/btn_lastDay"
+            android:id="@+id/lastDayBtn"
             android:text="〈  "
-            android:layout_toRightOf="@id/tv_date"
+            android:layout_toRightOf="@id/currentDateText"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/sty_w_r"
@@ -23,10 +23,10 @@
             android:textColor="#434343" />
 
         <Button
-            android:id="@+id/btn_nextDay"
+            android:id="@+id/nextDayBtn"
             android:text="  〉"
             android:gravity="right"
-            android:layout_toLeftOf="@id/tv_date"
+            android:layout_toLeftOf="@id/currentDateText"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/sty_w_r"
@@ -34,7 +34,7 @@
             android:textColor="#434343" />
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/currentDateText"
             android:layout_width="145dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -47,7 +47,7 @@
             android:textStyle="normal" />
 
         <ImageView
-            android:id="@+id/iv_settings"
+            android:id="@+id/settingsIcon"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
@@ -55,7 +55,7 @@
             android:src="@drawable/ic_baseline_settings_24" />
 
         <ImageView
-            android:id="@+id/iv_myProducts"
+            android:id="@+id/customListIcon"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
